<resources>

    <string name="app_name">Smart Track</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="main_menu">&lt;Main menu</string>
	
	<string name="large_text">Large Text</string>
	<string name="small_text">Small Text</string><string name="menu_header">empty</string>
	<string name="button">Track Library</string><string name="button2">Record</string><string name="button3">Playlist</string>
	
	<string name="button4"></string>
	<string name="button5">Movies</string>
	<string name="checkbox_name">checkbox_name</string>
	<string name="remove_item">remove</string>
	<string name="new_item">new playlist</string>
	<string name="confirm_item">confirm</string>
	<string name="image_label">image label</string>
	<string name="scrolling_text">String</string>
	
	
</resources>
