<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button1"
        android:layout_width="240dp"
        android:layout_height="183dp"
        android:layout_gravity="left|top"
        android:onClick="sendIntent"
        android:text="@string/button" />

    <Button
        android:id="@+id/button2"
        android:layout_width="121dp"
        android:layout_height="338dp"
        android:layout_gravity="left|bottom"
        android:text="@string/button2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="121dp"
        android:layout_height="338dp"
        android:layout_gravity="right|top"
        android:text="@string/button3" />

    <Button
        android:id="@+id/button4"
        android:layout_width="122dp"
        android:layout_height="156dp"
        android:layout_gravity="center"
        android:text="@string/button4" />

    <Button
        android:id="@+id/button5"
        android:layout_width="241dp"
        android:layout_height="183dp"
        android:layout_gravity="right|bottom"
        android:text="@string/button5" />

</FrameLayout>